--- a/kitty.conf
+++ b/kitty.conf
@@ -1510,7 +1510,8 @@ mouse_hide_wait 1.0
 #: configuration will change this value only for newly created OS
 #: windows.
 
-# linux_display_server auto
+# Wayland title bars are ugly.
+linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
