--- a/theme.conf
+++ b/theme.conf
@@ -1,7 +1,11 @@
-background #001e26
+#background #001e26
+background #002b36
 foreground #708183
 cursor #708183
-selection_background #002731
+#selection_background #002731
+#selection_foreground #001e26
+selection_foreground #002731
+selection_background #81908f
 color0 #002731
 color8 #001e26
 color1 #d01b24
@@ -18,4 +22,3 @@ color6 #259185
 color14 #81908f
 color7 #e9e2cb
 color15 #fcf4dc
-selection_foreground #001e26
