--- a/kitty.conf
+++ b/kitty.conf
@@ -27,7 +27,8 @@ font_family AcPlus IBM VGA 9x16 Nerd Font Complete
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+# 15 pts == 16 px at 120 DPI
+font_size 15.0
 
 #: Font size (in pts)
 
