add copy on select

--- a/kitty.conf
+++ b/kitty.conf
@@ -20,7 +20,8 @@ include theme.conf
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-font_family AcPlus IBM VGA 9x16 Nerd Font Complete
+#font_family AcPlus IBM VGA 9x16 Nerd Font Complete
+font_family AcPlus_IBM_VGA_9x16 Nerd Font
 
 #:     font_family      Operator Mono Book
 #:     bold_font        Operator Mono Medium
@@ -28,7 +29,7 @@ font_family AcPlus IBM VGA 9x16 Nerd Font Complete
 #:     bold_italic_font Operator Mono Medium Italic
 
 # 15 pts == 16 px at 120 DPI
-font_size 15.0
+font_size 20.0
 
 #: Font size (in pts)
 
@@ -353,6 +354,7 @@ mouse_hide_wait -1.0
 #: legal in URLs are allowed.
 
 # copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -1464,6 +1466,7 @@ mouse_hide_wait -1.0
 #: will only affect newly created OS windows.
 
 # macos_thicken_font 0
+text_composition_strategy 1.0 0
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes on macOS. For example, a
