move to Flexi font

--- a/kitty.conf
+++ b/kitty.conf
@@ -20,16 +20,14 @@ include theme.conf
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-#font_family AcPlus IBM VGA 9x16 Nerd Font Complete
-font_family AcPlus_IBM_VGA_9x16 Nerd Font
+font_family Flexi IBM VGA True
 
 #:     font_family      Operator Mono Book
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# 15 pts == 16 px at 120 DPI
-font_size 20.0
+font_size 16.0
 
 #: Font size (in pts)
 
