fix bold font display

--- a/kitty.conf
+++ b/kitty.conf
@@ -20,14 +20,14 @@
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-font_family Flexi IBM VGA True
+font_family FlexiIBMVGATrue Nerd Font
 
 #:     font_family      Operator Mono Book
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 18.0
 
 #: Font size (in pts)
 
@@ -1148,6 +1148,7 @@ copy_on_select yes
 #: interactive mode and reads its startup rc files.
 
 # editor .
+editor vim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
