use tokyo night colour scheme

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,5 @@
 # Includes
+include Tokyo Night.conf
 
 #: Fonts {{{
 
@@ -2245,9 +2246,3 @@ map kitty_mod+f toggle_fullscreen
 #: }}}
 
 #: }}}
-
-
-# BEGIN_KITTY_THEME
-# Paul Millr
-include current-theme.conf
-# END_KITTY_THEME
