--- a/kitty.conf
+++ b/kitty.conf
@@ -20,14 +20,14 @@ include Catppuccin-Mocha.conf
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-font_family FlexiIBMVGATrue Nerd Font
+font_family GoMono Nerd Font Mono
 
 #:     font_family      Operator Mono Book
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 18.0
+font_size 10.0
 
 #: Font size (in pts)
 
